--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,143 +2,148 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'ubuntu-latest'
 
 steps:
-- powershell: |
+- script: |
+      #!/bin/bash
+   
+      #Bash script starting
 
-        #Powershell script starting
+      MinimumSeverity='Critical,High' 
+      CancelScan=true
+      BaseUrl='https://www.netsparkercloud.com'
+      WebsiteId='141e9b9b-146b-4261-67b9-af0a0252cdd8'
+      ScanType='Incremental'
+      ProfileId='a015d310-ff99-49bd-25e2-af1c0238c9ba'
+      IntegrationSystem='AzureDevOps'
 
-        $MinimumSeverity = 'Critical,High'
-        $CancelScan = $true
-        $BaseUrl = 'https://www.netsparkercloud.com' 
-        $WebsiteId ='141e9b9b-146b-4261-67b9-af0a0252cdd8'
-        $ScanType = 'Incremental'
-        $ProfileId = 'a015d310-ff99-49bd-25e2-af1c0238c9ba'
-        $IntegrationSystem = 'AzureDevOps'
+      DoNotFail=false
+      FalsePositive=false
+      IsConfirmed=false
+      AcceptedRisk=false
+      
+      typeset -A SeverityOptionsForBuildFailMesssage
+      SeverityOptionsForBuildFailMesssage[DoNotFail]="Do not fail the build"
+      SeverityOptionsForBuildFailMesssage[Critical]="Critical"
+      SeverityOptionsForBuildFailMesssage[Critical,High]="High or above"
+      SeverityOptionsForBuildFailMesssage[Critical,High,Medium]="Medium or above"
+      SeverityOptionsForBuildFailMesssage[Critical,High,Medium,Low]="Low or above"
+      SeverityOptionsForBuildFailMesssage[Critical,High,Medium,Low,Best Practice]="Best Practices or above"
 
-        $FalsePositive=$false
-        $IsConfirmed=$false
-        $AcceptedRisk=$false
-        $DoNotFail=$false
+      CreateScanUrl="$BaseUrl/api/1.0/scans/CreateFromPluginScanRequest"
+      ScanInfoUrl="$BaseUrl/api/1.0/scans/ScanInfoForPlugin"
+      ScanCancelUrl="$BaseUrl/api/1.0/scans/CancelScanForPlugin/"
+      
+      Body="{'WebsiteId': '$WebsiteId', 'ProfileId': '$ProfileId', 'ScanType': '$ScanType', 'VcsCommitInfoModel': {'CiBuildConfigurationName': '$SYSTEM_TEAMPROJECT', 'CiBuildHasChange': '$BUILD_SOURCEVERSION', 'CiBuildId': '$BUILD_BUILDID', 'CiBuildUrl': '$SYSTEM_TEAMFOUNDATIONCOLLECTIONURI', 'Committer': '$BUILD_REQUESTEDFOREMAIL', 'IntegrationSystem': '$IntegrationSystem', 'VcsName': '$BUILD_REPOSITORY_PROVIDER', 'VcsVersion': '$BUILD_SOURCEVERSION'}}"
+      
+      UserNameTokenPair="$USERID:$APITOKEN"
+      
+      typeset -A ScanTaskState
+      ScanTaskState[0]=Queued
+      ScanTaskState[1]=Scanning
+      ScanTaskState[2]=Archiving
+      ScanTaskState[3]=Complete
+      ScanTaskState[4]=Failed
+      ScanTaskState[5]=Cancelled
+      ScanTaskState[6]=Delayed
+      ScanTaskState[7]=Pausing
+      ScanTaskState[8]=Paused
+      ScanTaskState[9]=Resuming
+      
+      function CancelScan () {
+          scanTaskId=$1
+          read IsValid ErrorMessage < <(echo $(curl -u $UserNameTokenPair -X POST "$ScanCancelUrl$scanTaskId" -H 'Content-Type: application/json' -d "" | jq -r '.IsValid, .ErrorMessage'))
+      
+          if [[ $IsValid == true ]]; then
+              echo "Scan canceled, Id: $scanTaskId"
+          else
+              echo 'Scan cancel error:'
+              echo $ErrorMessage
+              exit
+          fi
+      }
+      
+      read ScanTaskId IsValid < <(echo $(curl -u $UserNameTokenPair -X POST "$CreateScanUrl" -H 'Content-Type: application/json' -d "$Body" | jq -r '.ScanTaskId, .IsValid'))
+      
+      echo "Created scan..."
+      echo "Scan task id:  $ScanTaskId"
+      
+      if [[ ! -z "$ScanTaskId" ]] && $IsValid
+      then
+        isScanCompleted=false
+        #Check the scan status every 10 seconds.
+        while :
+        do
+          if [[ $isScanCompleted == true ]]; then
+            break
+          fi
+          echo 'Requesting scan info..'
+         
+          #get scan info
+          scanInfoResult=$(curl -u $UserNameTokenPair -X POST "$ScanInfoUrl" -H 'Content-Type: application/json' --data-raw '{ "ScanId": "'$ScanTaskId'", "DoNotFail": '$DoNotFail', "IsConfirmed": '$IsConfirmed', "IgnoredVulnerabilityStateFilters": { "Present": false, "FixedUnconfirmed": false, "FixedCantRetest": false, "FixedConfirmed": false, "Revived": false, "Scanning": false, "Ignored": false, "AcceptedRisk": '$AcceptedRisk', "FalsePositive": '$FalsePositive' }}')
+          echo "Scan Info Result : $scanInfoResult"
+          InfoIsValid=$(echo $scanInfoResult | jq -r '.IsValid')
+          FoundedSeverities=($(echo $scanInfoResult | jq -r '.FoundedSeverityAndCounts | keys[]'))
+          FoundedSeverityCounts=($(echo $scanInfoResult | jq -r '.FoundedSeverityAndCounts | values[]'))
+          InfoState=$(echo $scanInfoResult | jq -r '.State')
 
-        $SeverityOptionsForBuildFailMesssage = @{}
-        $SeverityOptionsForBuildFailMesssage.Add('DoNotFail', 'Do not fail the build')
-        $SeverityOptionsForBuildFailMesssage.Add('Critical', 'Critical')
-        $SeverityOptionsForBuildFailMesssage.Add('Critical,High', 'High or above')
-        $SeverityOptionsForBuildFailMesssage.Add('Critical,High,Medium', 'Medium or above')
-        $SeverityOptionsForBuildFailMesssage.Add('Critical,High,Medium,Low', 'Low or above')
-        $SeverityOptionsForBuildFailMesssage.Add('Critical,High,Medium,Low,Best Practice', 'Best Practices or above')
+          echo "---- Scan Info Start ----"
 
-        $CreateScanUrl = $BaseUrl + '/api/1.0/scans/CreateFromPluginScanRequest'
-        $ScanInfoUrl = $BaseUrl + '/api/1.0/scans/ScanInfoForPlugin' 
-        $ScanCancelUrl = $BaseUrl + '/api/1.0/scans/CancelScanForPlugin/'
+          if  ! $InfoIsValid
+          then
+              echo 'Error when getting scan info.'
+              exit 
+          fi
 
-        $Body = @{ 
-            WebsiteId = $WebsiteId; ProfileId = $ProfileId; ScanType = $ScanType; VcsCommitInfoModel = @{CiBuildConfigurationName = $env:SYSTEM_TEAMPROJECT; CiBuildHasChange = $env:BUILD_SOURCEVERSION; CiBuildId = $env:BUILD_BUILDID; CiBuildUrl= $env:SYSTEM_TEAMFOUNDATIONCOLLECTIONURI; Committer= $env:BUILD_REQUESTEDFOR; IntegrationSystem = $IntegrationSystem; VcsName = $env:BUILD_REPOSITORY_PROVIDER; VcsVersion = $env:BUILD_SOURCEVERSION }; 
-        }
-
-        $Base64Auth = $([System.Convert]::ToBase64String([System.Text.Encoding]::ASCII.GetBytes($env:USERID + ':' + $env:APITOKEN)))
-
-        $HeaderWithAuthorization = @{ 
-            Authorization = ('Basic ' + $Base64Auth)
-        }
-
-        enum ScanTaskState {
-            Queued = 0
-            Scanning = 1
-            Archiving = 2
-            Complete = 3
-            Failed = 4
-            Cancelled = 5
-            Delayed = 6
-            Pausing = 7
-            Paused = 8
-            Resuming = 9
-        }
-
-        try {
-            function CancelScan ([guid] $scanTaskId) {
-                Write-Output 'Requesting scan cancel..'
-                $scanCancelApiResult = Invoke-WebRequest -Uri ($ScanCancelUrl + $scanTaskId) -Method POST -Headers $HeaderWithAuthorization
-                Write-Output ('Scan cancel response status code: ' + $scanCancelApiResult.StatusCode)
-                if ($scanCancelApiResult.IsValid -eq $false) {
-                    Write-Output 'Scan cancel error:'
-                    Write-Output $scanCancelApiResult.ErrorMessage
-                    throw 'Error occured while canceling scan.'
-                }
-                Write-Output ('Scan canceled, Id: ' + $scanTaskId)
-            }
-
-            $scanApiResult = Invoke-RestMethod -Uri $CreateScanUrl -ContentType 'application/json; charset=UTF-8' -Method POST -Body ($Body | ConvertTo-Json) -Headers $HeaderWithAuthorization
-
-            Write-Output 'Create scan api result is:'
-            Write-Output $scanApiResult
-            Write-Output '' #create an empty line in terminal
-                                                        
-            $scanTaskId = $scanApiResult.ScanTaskId
-
-            $IgnoredVulnerabilityStateFilterList= @{Present=$false;FixedUnconfirmed=$false;FixedCantRetest=$false;FixedConfirmed=$false;Revived=$false;Scanning=$false;Ignored=$false;AcceptedRisk=$AcceptedRisk;FalsePositive=$FalsePositive}
-                $infoBody= @{
-                ScanId=$scanTaskId;DoNotFail=$DoNotFail;IsConfirmed=$IsConfirmed;IgnoredVulnerabilityStateFilters=$IgnoredVulnerabilityStateFilterList; 	          
-                }
-
-            Write-Output ('Scan task id is: ' + $scanTaskId)
-            if ($scanApiResult.IsValid -and $scanTaskId) {
-                do {
-                    Write-Output 'Requesting scan info..'
-                    $scanStatusResponse = Invoke-RestMethod -Uri ($ScanInfoUrl) -ContentType 'application/json; charset=UTF-8' -Headers $HeaderWithAuthorization -Method 'POST' -Body ($infoBody | ConvertTo-Json)
-                    if ($scanStatusResponse.IsValid -eq $false) {
-                        Write-Output 'Error when getting scan info.'
-                        throw 
-                    }
-
-                    Write-Output ('---- Scan Info Start ----')
-                    Write-Output ('ScanTaskId: ' + $scanTaskId)
-                    Write-Output ('State: ' + $scanStatusResponse.State)
-                    Write-Output ('IsValid: ' + $scanStatusResponse.IsValid)
-                    Write-Output ('FoundedSeverities: ')
-                                                                    
-                    foreach ($severity in $scanStatusResponse.FoundedSeverityAndCounts.PsObject.Properties) {
-                        Write-Output ('-' + $severity.Name + '(' + $severity.Value + ')')
-                        $match = $MinimumSeverity.Contains($severity.Name)
-                        if ($match -eq $true) {
-                            $severityText = $SeverityOptionsForBuildFailMesssage[$MinimumSeverity];
-                            Write-Output ('---- Error Messages ----')
-                            Write-Output ('Build failed because scan contains ' + $severityText + ' severity!')
-                            Write-Output ('---- Error Messages ----')
-                            Write-Output ('---- Scan Info End ----')
-
-                            if ($CancelScan -eq $true) {
-                                CancelScan($scanTaskId)
-                            }
-                            throw
-                        }
-                    }
-                    Write-Output ('---- Scan Info End ----')
-                    $scanStatus = $scanStatusResponse.State
-                                                                    
-                    if ($scanStatus -eq [ScanTaskState]::Failed -or $scanStatus -eq [ScanTaskState]::Cancelled -or $scanStatus -eq [ScanTaskState]::Paused -or $scanStatus -eq [ScanTaskState]::Pausing ) {
-                        Write-Output ('---- Error Messages ----')
-                        Write-Output ('Scan aborted because state is ' + $scanStatus)
-                        Write-Output ('---- Error Messages ----')
-                        throw
-                    }
-
-                    $isScanCompleted = $scanStatus -eq [ScanTaskState]::Complete
-                    if ($isScanCompleted -eq $true) {
-                        exit 0
-                    }
-                    else {
-                        Start-Sleep -s 10
-                    }
-                } while ($isScanCompleted -eq $false)
-            }
-        }
-        catch {
-            $StatusCode = $_.Exception.Response.StatusCode.value__
-            if ($null -ne $StatusCode) {
-                Write-Output ('Operation failed with http status code: ' + $StatusCode)
-            }
-            exit 1
-        }
+          echo "ScanTaskId: $ScanTaskId"
+          echo "State: $InfoState"
+          echo "IsValid: $InfoIsValid"
+          echo "FoundedSeverities : "
+      
+          #severity list null check control
+          if [[ $FoundedSeverities != {} ]] &&  [[ ! -z $FoundedSeverities ]]
+          then
+              for (( i=0; i<${#FoundedSeverities[@]}; i++)); do
+                echo "- ${FoundedSeverities[$i]} (${FoundedSeverityCounts[$i]})"
+                if [[ "$MinimumSeverity" == *"${FoundedSeverities[$i]}"* ]]; then
+                  echo "---- Error Messages ----"
+                  severityText=$SeverityOptionsForBuildFailMesssage[$MinimumSeverity];
+                  echo "- Build failed because scan contains $severityText severity!"
+                  echo "---- Error Messages ----"
+                  echo "---- Scan Info End ----"  
+                  #cancel scan
+                  if [[ $CancelScan == true ]]; then
+                    CancelScan $ScanTaskId
+                  fi
+                  exit
+                fi
+              done
+          else
+             echo "no vulnerability found."
+          fi      
+          echo "---- Scan Info End ----"  
+          #scan state control
+          if [ "$InfoState" = "${ScanTaskState[4]}" ] || [ "$InfoState" = "${ScanTaskState[5]}" ] || [ "$InfoState" = "${ScanTaskState[8]}" ] || [ "$InfoState" = "${ScanTaskState[7]}" ]
+          then
+              echo "---- Error Messages ----"
+              echo "Scan aborted because state is $InfoState"
+              echo "---- Error Messages ----"
+              exit
+          fi
+      
+          if [ "$InfoState" = "${ScanTaskState[3]}" ]
+          then
+              isScanCompleted=true
+              exit 
+          else
+              isScanCompleted=false
+              sleep 10s
+          fi
+        done
+      else
+          echo "---- Error Messages ----"
+          echo $ErrorMessage
+          echo "---- Error Messages ----"
+          exit
+      fi
